--- a/views/about.html
+++ b/views/about.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rodrigo Emanuel</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <header>
             <div class="links">
-                <a href="/index.html">Sobre</a>
-                <a href="classes.html">Aulas</a>
+                <a href="/">Sobre</a>
+                <a href="/portifolio">Aulas</a>
             </div>
         </header>
         <div id="wrapper">
