--- a/views/portifolio.njk
+++ b/views/portifolio.njk
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.njk" %}
 
 {% block head %}
 
@@ -15,83 +15,20 @@
 
 <section class="cards">
     
-    <div class="card" id="8tTWt-JY">
+    {% for item in items %}
+    <div class="card"  id="{{item.id}}">
         <div class="card__image-container">
-            <img src="https://img.youtube.com/vi/3t78tTWt-JY/hqdefault.jpg" alt="Vídeo de aula">
+            <img src="https://img.youtube.com/vi/{{item.id}}/hqdefault.jpg" alt="Imagem de {{item.title}}">
         </div>
         <div class="card__content">
-            <p>Behind the Code # 01 | Autenticação do Adonis</p>
+            <p>{{item.title}}</p>
         </div>
         <div class="card__info">
-            <p>1:06:26   min</p>
-            <p class="card__price">Grátis</p>
+            <p>{{item.duration}}</p>
+            <p class="card__price">{{item.price}}</p>
         </div>
     </div>
-
-    <div class="card" id="R7WTFLM1lto">
-        <div class="card__image-container">
-            <img src="https://img.youtube.com/vi/R7WTFLM1lto/hqdefault.jpg" alt="Vídeo de aula">
-        </div>
-        <div class="card__content">
-            <p>Behind the Code # 02 | Recuperação de senha</p>
-        </div>
-        <div class="card__info">
-            <p>1:51:39 min</p>
-            <p class="card__price">Grátis</p>
-        </div>
-    </div>
-
-    <div class="card" id="7yyW7z8fbB4">
-        <div class="card__image-container">
-            <img src="https://img.youtube.com/vi/7yyW7z8fbB4/hqdefault.jpg" alt="Vídeo de aula">
-        </div>
-        <div class="card__content">
-            <p>Behind the Code # 03 | Code review App Mobile</p>
-        </div>
-        <div class="card__info">
-            <p>32:44 min</p>
-            <p class="card__price">Grátis</p>
-        </div>
-    </div>
-
-    <div class="card" id="sB7GaMTJ7eI">
-        <div class="card__image-container">
-            <img src="https://img.youtube.com/vi/sB7GaMTJ7eI/hqdefault.jpg" alt="Vídeo de aula">
-        </div>
-        <div class="card__content">
-            <p>Behind the Code # 04 | Crud de workshops</p>
-        </div>
-        <div class="card__info">
-            <p>2:44:22 min</p>
-            <p class="card__price">Grátis</p>
-        </div>
-    </div>
-
-    <div class="card" id="whDe_W-CtiU">
-        <div class="card__image-container">
-            <img src="https://img.youtube.com/vi/whDe_W-CtiU/hqdefault.jpg" alt="Vídeo de aula">
-        </div>
-        <div class="card__content">
-            <p>Behind the Code # 05 | Inscrição nos workshops</p>
-        </div>
-        <div class="card__info">
-            <p>1:18:23 min</p>
-            <p class="card__price">Grátis</p>
-        </div>
-    </div>
-
-    <div class="card"  id="rrvgngRairM">
-        <div class="card__image-container">
-            <img src="https://img.youtube.com/vi/rrvgngRairM/hqdefault.jpg" alt="Vídeo de aula">
-        </div>
-        <div class="card__content">
-            <p>Behind the Code # 06 | Feature de transição</p>
-        </div>
-        <div class="card__info">
-            <p>1:05:49 min</p>
-            <p class="card__price">Grátis</p>
-        </div>
-    </div>
+    {% endfor %}
     
 </section>
 
