--- a/public/style.css
+++ b/public/style.css
@@ -184,3 +184,22 @@ iframe {
     border-radius: 16px;
     top: -10px;
 }
+
+/* VIDEO PAGE */
+
+.video {
+    margin: 0 auto;
+    max-width: 500px;
+}
+
+.card__video-container {
+    position: relative;
+    padding-top: 62.5%;
+}
+
+.card__video-container iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+}
