Ajustes de layout da página 'videos'

--- a/views/portifolio.njk
+++ b/views/portifolio.njk
@@ -35,24 +35,7 @@
     
 </section>
 
-<div class="modal-overlay">
-    <div class="modal">
-        
-        <a href="" class="maxi-modal">
-            <i class="material-icons">maximize</i>
-        </a>
-        
-        <a href="" class="close-modal">
-            <i class="material-icons">close</i>
-        </a>
-
-        <div class="modal-content">
-        </div>
-
-    </div>
-</div>
-
-<script src="scripts.js"></script>
+<script src="/scripts.js"></script>
 
 {% endblock %}
 
