Inclusão de formulário para exercícios de Funções

--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,7 @@ header {
 
 .links {
     text-align: center;
+    margin: 10px 0 10px 0;
 }
 
 .links a {
@@ -40,9 +41,78 @@ header {
     transition: color 700ms;
 }
 
+.contato {
+    display: flex;
+    justify-content: center;
+}
+
+.input {
+    width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    text-align: justify;
+    padding: 0;
+}
+
+.input p {
+    margin: 0 0 0 0;
+    padding: 0px 0px 0 10px;
+    width: 100%;
+    font-size: 28px;
+}
+
+.input p:nth-child(1),
+.input p:nth-child(2) {
+    font-weight: bold;
+    margin: 10px 0;
+    text-align: center;
+}
+
+.input input {
+    width: 600px;
+    height: 50px;
+    margin: 10px 10px;
+    padding: 0 10px;
+    font-size: 32px;
+}
+
+.calculo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.calculo input {
+    width: 350px;
+}
+
+.calculo p:nth-child(2) {
+    font-weight: 400;
+    text-align: left;
+}
+
+footer div {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    width: 100%;
+    justify-items: center;
+    border-bottom: 1px solid#333;
+    border-top: 1px solid#333;;
+}
+
+footer h1 {
+    padding: 12px 0;
+    background: rgb(0, 0, 0, 0.1);
+    font-size: 16px;
+    font-weight: 400;
+    width: 100%;
+    text-align: center;
+}
+
 #wrapper {
     text-align: center;
-    padding: 32px;
+    padding: 16px;
 }
 
 #wrapper img {
