--- a/views/footer.njk
+++ b/views/footer.njk
@@ -1,6 +1,8 @@
 <footer>
-    <p>Copyright Launch Store</p>
-    <p>Endereço: Residencial Acalanto - R. Guilherme Gemballa, 260 - Sala 3 - Jardim América, Rio do Sul - SC, 89160-188</p>
+    <div>
+        <h1>Copyright Launch Store</h1>
+        <h1>Endereço: Residencial Acalanto - R. Guilherme Gemballa, 260 - Sala 3 - Jardim América, Rio do Sul - SC, 89160-188</h1>
+    </div>    
 </footer>
 
 <script src="/scripts.js"></script>
