Máscara de CPF OK.

--- a/views/about.njk
+++ b/views/about.njk
@@ -22,16 +22,16 @@
         <p>Dados</p>
 
         <p>CPF: </p>
-        <input mame="cpf" type="text">
+        <input id="cpf" mame="cpf" type="text" maxlength="14">
 
         <p>Valor do Orçamento: </p>
         <div class="calculo">
-            <input name="valor" type="text" onkeydown="format()">
+            <input name="valor" type="text">
             <p id="resposta">Valor: </p>
         </div>
         
-        <p>E-mail: </p>
-        <input name="email" type="email">
+        <p>Percentual: </p>
+        <input name="percent" type="text">
     </div>
 </div>
 
