--- a/views/footer.njk
+++ b/views/footer.njk
@@ -1,7 +1,7 @@
 <footer>
     <div>
-        <h1>Copyright Launch Store</h1>
-        <h1>Endereço: Residencial Acalanto - R. Guilherme Gemballa, 260 - Sala 3 - Jardim América, Rio do Sul - SC, 89160-188</h1>
+        <h1>Formado pela Rocketseat</h1>
+        <h1>Salvador-BA</h1>
     </div>    
 </footer>
 
