Formato percentual OK.

--- a/views/about.njk
+++ b/views/about.njk
@@ -26,12 +26,12 @@
 
         <p>Valor do Orçamento: </p>
         <div class="calculo">
-            <input name="valor" type="text">
+            <input name="valor" type="text" maxlength="17">
             <p id="resposta">Valor: </p>
         </div>
         
         <p>Percentual: </p>
-        <input name="percent" type="text">
+        <input id="percent" name="percent" type="text">
     </div>
 </div>
 
